syntax = "proto3";
package user.v1;
option go_package="user/api/v1;proto";

// 创建用户
message SignInRequest{
    string nickname = 1;
    string mobile = 2;
    string password = 3;
    string gender = 4;
}

message UpdateRequest{
    string nickname = 1;
    string mobile = 2;
    string password = 3;
    string gender = 4;
    string avatar = 5;
}

// 获取用户请求
message GetUserRequest{
    int64 id = 1;
    int64 code = 2;
}

// 获取用户响应
message UserResponse{
    int64 id = 1;
    int64 code = 2;
    string nickname = 3;
    string avatar = 4;
    string gender = 5;
    LevelResponse level = 6;
}

// 获取用户登记响应
message LevelResponse{
    int64 id = 1;
    string name = 2;
    string icon = 3;
}

// 密码验证请求
message CheckPasswordRequest{
    string password =1;
    string enctypedPassword = 2;
}

// 验证密码响应
message CheckPasswordResponse{
    bool success = 1;
}

service User{
    rpc CreateUser(SignInRequest) returns (UserResponse); // 创建用户
    rpc UpdateUser(UpdateRequest) returns (UserResponse); // 更新用户
    rpc CheckPassword(CheckPasswordRequest) returns (CheckPasswordResponse); // 验证用户密码
    rpc GetUser(GetUserRequest) returns (UserResponse); // 通过id获取用户
    rpc GetUserByCode(GetUserRequest) returns (UserResponse); // 通过code获取用户
}